# bonch-click

./: .env.template  .gitignore  .pdm-python  :w  README.md  alembic.ini  docker-compose.yml  log  main.py  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 5ba535d5cc6b_remove_primary_autoinc_id_now_email_is_.py  f5de643accda_initial_tables.py
migrator/: Dockerfile  requirements.txt
src/: config.py  main.py  test.py
src/api/: Dockerfile  __init__.py  main.py
src/api/dependencies/: __init__.py  auth.py
src/api/routers/: __init__.py  accounts.py  auth.py
src/api/services/: auth.py
src/bonch_click.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/click-app/: Dockerfile  config.py  cronfile  main.py  test.py
src/common/config/: config.py  pyproject.tmp
src/common/database/: __init__.py  crud.py  database.py  models.py
src/database/: __init__.py  crud.py  database.py  models.py
tests/: test_database.py
tests/mocks/: database.py
tests/unit/test_api/: test_accounts.py
tests/unit/test_database/: conftest.py  test_database.py
