[project]
name = "bonch-click"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name="OxF331D3A17", email="KarimullinArthur@disroot.org" },
    {name = "Karimullin Arthur", email = "KarimullinArthur@disroot.org"},
]
#requires-python = ">=3.11"
requires-python = ">=3.11"
dependencies = [
    "bonchapi==0.0.6",
    "sqlalchemy==2.0.40",
    "psycopg2-binary==2.9.10",
    "pydantic_settings==2.9.1",
    "python-dotenv==1.1.0",
    "loguru==0.7.3 ",
    "fastapi[standard]==0.115.12",
    "tox>=4.25.0",
]

readme = "README.md"
license = {text = "MIT"}


[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"


[tool.ruff]
# Какие правила использовать (все популярные и правильные)
lint.select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (импорты красиво наводим)
    "N",    # pep8-naming (нормальные имена переменных)
    "UP",   # pyupgrade (обновление синтаксиса под новый Python)
#    "D",    # pydocstyle (доки к функциям и классам)
    "C90",  # mccabe (сложность функций)
    "PERF", # ловим неэффективный код
    "RUF"   # спецправила самого Ruff
]

# Что отключить (если есть что-то что прям бесит)
lint.ignore = [
    "D100", # Нет докстринга в модуле
    "D101", # Нет докстринга в классе
    "D102", # Нет докстринга в методе
    "E722",
    "F401",
    "F403",
]

# Максимальная длина строки (мы же не варвары)
line-length = 100

# Автоматически сортировать импорты
fix = true

# На каких версиях питона пишем
target-version = "py311"

[tool.ruff.format]
# Форматировать код сразу по PEP8
quote-style = "double"     # Одинарные кавычки, потому что стильный парень
indent-style = "space"     # Пробелы вместо табов (прощай, табомания)

[tool.ruff.lint.isort]
# Кастомизация для импорта
combine-as-imports = true
force-single-line = false

[tool.pdm]
distribution = false

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "tox>=4.25.0",
    "pytest-asyncio>=0.26.0",
]
lint = [
    "ruff>=0.11.9",
    "mypy>=1.10.0",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F811"]

